Alinhando botão de copiar

--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@ body {
     background-color: rgb(59, 29, 87);
     border-radius: 5px;
     display: flex;
+    justify-content: space-between;
     font-size: 20px;
     align-items: center;
     height: 50px;
     width: 350px;
-    /* position: absolute; */
     overflow: hidden;
     padding: 1px;
 }
@@ -47,17 +47,14 @@ body {
 }
 
 .senha button {
-    background-color: white;
     border: none;
     color: black;
     cursor: pointer;
     font-family: inherit;
     font-weight: bold;
     padding: 4px;
-    position: relative;
-    top: 0;
-    right: 0;
     opacity: 0;
+    margin-right: 10px;
     transition: opacity 0.2s ease, transform 0.2s ease;
 }
 
